# stuzhik

./: .editorconfig  .env.example  .gitignore  .prettierignore  404.html  LICENSE  README.md  eslint.config.js  faq.html  generate-latest.js  hashmap.json  index.html  package-lock.json  package.json  robots.txt  sitemap.xml  uno.config.ts  vite.config.ts  vitest.config.ts
assets/: app.CxrOD_t_.js  app.DY3oFu7n.js  app.HvcJzXn-.js  app.O0oatR9P.js  app.XxTi8E1_.js  faq.md.BxsTDAM2.js  faq.md.FWoQUYl8.js  faq.md.FWoQUYl8.lean.js  faq.md.sEgzB3xV.js  faq.md.sEgzB3xV.lean.js  guide_installation.md.DkWFq0oJ.js  guide_installation.md.DkWFq0oJ.lean.js  guide_installation.md.ynR6ZZhJ.js  guide_installation.md.ynR6ZZhJ.lean.js  guide_log-analyzer.md.CNhSlujC.js  guide_log-analyzer.md.CNhSlujC.lean.js  guide_log-analyzer.md.DM6Li9x5.js  guide_log-analyzer.md.DM6Li9x5.lean.js  guide_modpacks.md.CIp_vdab.js  guide_modpacks.md.CIp_vdab.lean.js  guide_modpacks.md.CXcbanEy.js  guide_modpacks.md.CXcbanEy.lean.js  guide_modpacks.md.nmc3tT5H.js  guide_modpacks.md.nmc3tT5H.lean.js  guide_mods.md.aBaAertG.js  guide_mods.md.aBaAertG.lean.js  guide_mods.md.qSLCPG2y.js  guide_mods.md.qSLCPG2y.lean.js  guide_quick-start.md.4u4-GXVm.js  guide_quick-start.md.4u4-GXVm.lean.js  guide_quick-start.md.BZb8rHvr.js  guide_quick-start.md.BZb8rHvr.lean.js  index.md.BVIoiqeI.js  index.md.DS3Clu3M.lean.js  style.BW4OjjJr.css
assets/chunks/: @localSearchIndexroot.BVSBwmMN.js  @localSearchIndexroot.CcKG_pkD.js  @localSearchIndexroot.CzHyTU4I.js  @localSearchIndexroot.DQ-DMN0D.js  VPLocalSearchBox.BBpSzzyk.js  VPLocalSearchBox.CIHrSaUR.js  VPLocalSearchBox.Cn-zrue9.js  VPLocalSearchBox.DqfCIHVX.js  VPLocalSearchBox.aYlrdwiD.js  framework.Cz7uxNdR.js  framework.tk4zCJ0Z.js  theme.B69fuFLF.js  theme.BOVmG_w9.js  theme.C1qtN08c.js  theme.D3dbl8fH.js  theme.DOS3dhv7.js
docs/: faq.md  index.md
docs/.vitepress/: config.mts  config.ts
docs/guide/: installation.md  (+4 more)
guide/: installation.html  log-analyzer.html  modpacks.html  mods.html  quick-start.html
locales/: en.json  ru.json
scripts/: check-translations.js  generate-source-bundle.ts
src/: App.css  App.tsx  changelog.json  global.d.ts  index.tsx
src-tauri/: Cargo.toml  Cargo.toml.backup  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/stuzhik-core/: Cargo.toml
src-tauri/crates/stuzhik-core/src/: error.rs  i18n.rs  lib.rs  types.rs
src-tauri/crates/stuzhik-db/: Cargo.toml
src-tauri/crates/stuzhik-db/src/: db.rs  knowledge_base.rs  lib.rs
src-tauri/crates/stuzhik-db/src/migrations/: mod.rs
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  cancellation.rs  collections.rs  config_editor.rs  conflict_predictor.rs  downloader.rs  error_reporter.rs  game_settings.rs  games.rs  gpu.rs  integrity.rs  java.rs  launch_tracker.rs  lib.rs  loaders.rs  main.rs  minecraft.rs  modpack_editor.rs  mods.rs  paths.rs  recommendations.rs  resources.rs  secrets.rs  settings.rs  stzhk.rs  translations.rs  tray.rs  utils.rs  wiki.rs
src-tauri/src/api/: cache.rs  curseforge.rs  mod.rs  modrinth.rs
src-tauri/src/code_editor/: metadata.rs  mod.rs  project_detector.rs
src-tauri/src/code_editor/language_server/: completion.rs  diagnostics.rs  hover.rs  mod.rs
src-tauri/src/code_editor/minecraft_data/: cache.rs  jar_parser.rs  mod.rs  types.rs
src-tauri/src/code_editor/type_definitions/: generator.rs  kubejs.rs  mod.rs
src-tauri/src/hytale/: execution.rs  installation.rs  mod.rs  mods.rs  settings.rs
src-tauri/src/instances/: execution.rs  installation.rs  lifecycle.rs  mod.rs  utilities.rs
src-tauri/src/launchers/: curseforge.rs  generic.rs  legacy.rs  mod.rs  modrinth.rs  multimc.rs  official.rs  types.rs
src-tauri/src/log_analyzer/: auto_fix.rs  crash_history.rs  live_monitor.rs  mappings.rs  mod.rs  mod.rs.test  patterns.rs  solution_finder.rs
src-tauri/src/modpacks/: editor.rs  install.rs  mod.rs  patch.rs  preview.rs  search.rs  types.rs
src-tauri/src/p2p/: consent.rs  crypto.rs  discovery.rs  friends.rs  groups.rs  history.rs  mod.rs  network.rs  notifications.rs  protocol.rs  queue.rs  security.rs  server.rs  server_sync.rs  settings.rs  transfer.rs  watch.rs
src-tauri/src/performance/: log_scanner.rs  mod.rs  process_monitor.rs  spark.rs  spark_parser.rs  types.rs
src-tauri/src/server/: client_mods.rs  console.rs  eula.rs  import.rs  installer.rs  metrics.rs  mod.rs  players.rs  properties.rs  rcon.rs
src-tauri/src/smart_downloader/: mod.rs  registry.rs  types.rs
src-tauri/src/sync/: classifier.rs  executor.rs  mod.rs  types.rs
(+217 files in other folders)
