[workspace]
members = [
    ".",
    "crates/stuzhik-core",
    "crates/stuzhik-db",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies for all crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json", "stream", "http2"] }  # HTTP/2 enabled by default
chrono = { version = "0.4.42", features = ["serde"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
log = "0.4.29"
anyhow = "1.0.100"
uuid = { version = "1.18.1", features = ["v4", "serde", "v5"] }

[package]
name = "stuzhik"
version = "0.0.6"
description = "Minecraft launcher with intelligent mod management"
authors = ["sibxodev@ya.ru"]
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stuzhik_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Workspace crates
stuzhik-core = { path = "crates/stuzhik-core" }
stuzhik-db = { path = "crates/stuzhik-db" }

# Tauri
tauri = { version = "2.9.4", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# App-specific dependencies
rand = "0.9.2"
rand_core = "0.6"  # For ed25519-dalek compatibility
sysinfo = "0.37.2"
futures = "0.3.31"
zip = { version = "7.0.0", default-features = false, features = ["deflate", "bzip2", "zstd", "aes-crypto"] }
tar = "0.4.44"
flate2 = "1.1.5"
sha1 = "0.10.6"
sha2 = "0.10.9"
blake3 = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }  # Fast hash for cache invalidation
directories = "6.0.0"
semver = "1.0.27"
env_logger = "0.11.8"
fern = "0.7"
uuid = { workspace = true }
walkdir = "2.5.0"
urlencoding = "2.1.3"
tokio-util = "0.7.17"
regex = "1.10"
notify = { version = "8.2.0", default-features = false, features = ["macos_kqueue"] }
rayon = "1.10"  # Параллельный анализ логов для ускорения
base64 = "0.22"  # Для конвертации изображений в data URL
zstd = "0.13"    # Сжатие бэкапов
glob = "0.3"     # Паттерны для sync
hex = "0.4"      # Кодирование хешей для delta-sync
toml = "0.9.8"     # TOML parsing for mods.toml

# P2P / Stuzhik Connect
rmp-serde = "1.3"   # MessagePack сериализация
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }  # X25519 key exchange (curve25519-dalek 4.1.3 fixes RUSTSEC-2024-0344)
ed25519-dalek = { version = "2.1", features = ["rand_core"] }  # Ed25519 signatures for friends trust system

# Secure storage
# keyring needs explicit platform features, otherwise uses Mock backend!
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
aes-gcm = "0.10"           # AES-256-GCM encryption (AEAD)
argon2 = "0.5"             # Argon2id key derivation (memory-hard)
machine-uid = "0.5"        # Device-bound key material

