[package]
name = "stuzhik-core"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
zip = { version = "7.0.0", default-features = false, features = ["deflate", "bzip2", "zstd", "aes-crypto"] }
